Moved CUDA source files to PqaCore.vcxproj .

--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -170,7 +170,11 @@
     <ClInclude Include="CpuEngine.decl.h" />
     <ClInclude Include="CpuEngine.fwd.h" />
     <ClInclude Include="CpuEngine.h" />
+    <ClInclude Include="CudaArray.h" />
     <ClInclude Include="CudaEngineFloat.h" />
+    <ClInclude Include="CudaException.h" />
+    <ClInclude Include="CudaMain.h" />
+    <ClInclude Include="CudaMacros.h" />
     <ClInclude Include="GapTracker.h" />
     <ClInclude Include="Interface\IPqaEngine.h" />
     <ClInclude Include="Interface\IPqaEngineFactory.h" />
@@ -211,7 +215,10 @@
     <ClCompile Include="CETrainOperation.cpp" />
     <ClCompile Include="CETrainSubtaskAdd.cpp" />
     <ClCompile Include="CEUpdatePriorsSubtaskMul.cpp" />
+    <ClCompile Include="CudaArray.cpp" />
     <ClCompile Include="CudaEngineFloat.cpp" />
+    <ClCompile Include="CudaException.cpp" />
+    <ClCompile Include="CudaMain.cpp" />
     <ClCompile Include="PqaCInterop.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
     <ClCompile Include="dllmain.cpp">
@@ -236,9 +243,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PqaCuda\PqaCuda.vcxproj">
-      <Project>{75060d21-a023-4147-9ce6-03d8c82465d2}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\SRPlatform\SRPlatform.vcxproj">
       <Project>{66ebbc7d-97c5-4a7e-84d8-623da032f3d3}</Project>
     </ProjectReference>
