--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="CudaEngineFloat.h" />
     <ClInclude Include="CudaException.h" />
     <ClInclude Include="CudaMacros.h" />
+    <ClInclude Include="CudaStreamPool.h" />
     <ClInclude Include="GapTracker.h" />
     <ClInclude Include="Interface\CudaMain.h" />
     <ClInclude Include="Interface\IPqaEngine.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="CudaEngineFloat.cpp" />
     <ClCompile Include="CudaException.cpp" />
     <ClCompile Include="CudaMain.cpp" />
+    <ClCompile Include="CudaStreamPool.cpp" />
     <ClCompile Include="PqaCInterop.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
     <ClCompile Include="dllmain.cpp">
