--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClInclude Include="Interface\CudaMain.h">
       <Filter>Header Files\Interface</Filter>
     </ClInclude>
+    <ClInclude Include="CudaStreamPool.h">
+      <Filter>Header Files\CUDA Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -378,6 +381,9 @@
       <Filter>Source Files\CUDA Engine</Filter>
     </ClCompile>
     <ClCompile Include="CudaMain.cpp">
+      <Filter>Source Files\CUDA Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="CudaStreamPool.cpp">
       <Filter>Source Files\CUDA Engine</Filter>
     </ClCompile>
   </ItemGroup>
