--- a/ProbQA/PqaCore/PqaCore.vcxproj
+++ b/ProbQA/PqaCore/PqaCore.vcxproj
@@ -179,6 +179,7 @@
     <ClInclude Include="CudaEngineGpu.cuh" />
     <ClInclude Include="CudaException.h" />
     <ClInclude Include="CudaMacros.h" />
+    <ClInclude Include="CudaQuiz.h" />
     <ClInclude Include="CudaStreamPool.h" />
     <ClInclude Include="GapTracker.h" />
     <ClInclude Include="Interface\CudaMain.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="CudaEngine.cpp" />
     <ClCompile Include="CudaException.cpp" />
     <ClCompile Include="CudaMain.cpp" />
+    <ClCompile Include="CudaQuiz.cpp" />
     <ClCompile Include="CudaStreamPool.cpp" />
     <ClCompile Include="PqaCInterop.cpp" />
     <ClCompile Include="CpuEngine.cpp" />
