--- a/ProbQA/PqaCore/PqaCore.vcxproj.filters
+++ b/ProbQA/PqaCore/PqaCore.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClInclude Include="CudaQuiz.h">
       <Filter>Header Files\CUDA Engine</Filter>
     </ClInclude>
+    <ClInclude Include="CudaMemPool.h">
+      <Filter>Header Files\CUDA Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -393,6 +396,9 @@
       <Filter>Source Files\CUDA Engine</Filter>
     </ClCompile>
     <ClCompile Include="CudaQuiz.cpp">
+      <Filter>Source Files\CUDA Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="CudaMemPool.cpp">
       <Filter>Source Files\CUDA Engine</Filter>
     </ClCompile>
   </ItemGroup>
