A very basic implementation of exposure of internal statistics. To be refactored to bulk copying.

--- a/ProbQA/PqaCoreTests/PqaCoreTests.vcxproj
+++ b/ProbQA/PqaCoreTests/PqaCoreTests.vcxproj
@@ -107,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DichotomyTest.cpp" />
+    <ClCompile Include="Dimensions.cpp" />
     <ClCompile Include="PqaCoreTestsMain.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
