Use CUDA 11 and adjust for a change in ctypes

--- a/ProbQA/ProbQANetCore/ProbQANetCore.csproj
+++ b/ProbQA/ProbQANetCore/ProbQANetCore.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
     <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>D:\Dev\Views\Engines\ProbQA\ProbQA\Backup\ProbQANetCore\</UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
+    <UpgradeBackupLocation>D:\Dev\Views\Engines\ProbQA\ProbQA\Backup1\ProbQANetCore\</UpgradeBackupLocation>
+    <OldToolsVersion>Current</OldToolsVersion>
   </PropertyGroup>
 </Project>
