Start enabling compilation on Linux

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ __pycache__
 /Interop/Python/ProbQAInterop/DLLs/PqaCore.pdb
 /Interop/Python/ProbQAInterop/DLLs/SRPlatform.dll
 /Interop/Python/ProbQAInterop/DLLs/SRPlatform.pdb
+build
